--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,13 @@
 name = "Isosuite"
 uuid = "4e0cf86c-8ca5-4e68-a38e-9d6c92424124"
 authors = ["Yunlong Lian <algorithm.lian@gmail.com>"]
-version = "0.2.2"
+version = "0.2.3"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
 julia = "1"
+PyCall = "1.0,3.0"
